# avvocato

./: app.py  app_fixed_part1.py  app_fixed_part2.py  app_fixed_part3.py  database.py  fee_calculator.py  pyproject.toml  render.yaml  requirements.txt  utils.py
.streamlit/: config.toml  style.css
data/: services.csv  services.json
streamlit-old/: style.css
utils/: __init__.py  email_sender.py  fee_calculator.py  pdf_generator.py
